Fix core client creation
- Do not configure scopes as it's not needed for this flow