@@ -5,6 +5,7 @@ import org.wcdevs.blog.cdk.Util;
 import software.amazon.awscdk.core.App;
 import software.amazon.awscdk.services.cognito.OAuthScope;
 
+import java.util.Collections;
 import java.util.List;
 
 public class CognitoDeployer {
@@ -47,7 +48,7 @@ public class CognitoDeployer {
         .applicationUrl(coreApplicationUrl)
         .userPoolOauthCallBackUrls(coreCallbackUrls)
         .flowClientCredentialsEnabled(true)
-        .scopes(List.of(OAuthScope.OPENID))
+        .scopes(Collections.emptyList())
         .build();
     var input = CognitoStack.InputParameters
         .builder()
